new tag for left and right side of page

--- a/index.html
+++ b/index.html
@@ -10,19 +10,41 @@
 <body>
 
 <nav id="bar">
-<!--fixed bar w logo and log in account-->
+<!--fixed bar w logo and log in form info-->
   <div class="content">
-    <div class="facelook">FACELOOK</div>
+    <div class="facelook">MYLOOK</div>
 
-  <div class="login">
-  <form>
-    <input type="email" name="email-address" placeholder="Email" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <input type="submit" value="Log in">
-  <form>
+    <div class="login">
+      <form>
+       <input type="email" name="email-address" placeholder="Email" required>
+       <input type="password" name="password" placeholder="Password" required>
+       <input type="submit" value="Log in">
+      <form>
+    </div>
   </div>
-</div>
-</>
+</nav>
 
+<section id="left-side">
+<!--includes bullet points and details-->
+  <div class="details">
+    <h2>Connect with all your friends!</h2>
+    <ul>
+      <li><b>See photos and updates</b> in your news feed.</li>
+      <li><b>Post your status for the world</b> to see from your profile.</li>
+      <li><b>Get in touch with your friends</b> by "friending" them.</li>
+      <li><b>Like things</b> because you're a positive person!</li>
+    </ul>
+  </div>
+</section>
+
+<section id="right-side">
+  <div><h2>Connect with all your friends!</h2>
+  <ul>
+    <li>See photos and updates in your news feed.</li>
+    <li>Post your status for the world to see from your profile.</li>
+    <li>Get in touch with your friends by "friending" them.</li>
+    <li>Like things because you're a positive person!</li>
+  </ul></div>
+</section>
 </body>
 </html>
