--- a/index.html
+++ b/index.html
@@ -38,13 +38,46 @@
 </section>
 
 <section id="right-side">
-  <div><h2>Connect with all your friends!</h2>
-  <ul>
-    <li>See photos and updates in your news feed.</li>
-    <li>Post your status for the world to see from your profile.</li>
-    <li>Get in touch with your friends by "friending" them.</li>
-    <li>Like things because you're a positive person!</li>
-  </ul></div>
+  <div class="box">
+    <p>Sign Up</p><br />
+
+    <form>
+      <input type="text" name="firstname" placeholder="First Name" required>
+      <input type="text" name="lastname" placeholder="Last Name" required>
+
+      <input type="email" name="email-address" placeholder="Your Email" required>
+      <input type="password" name="password" placeholder="Your Password" required>
+      <input type="password" name="password" placeholder="Confirm Your Password" required>
+
+      <br />
+      <select name="cars">
+        <option value="volvo">Volvo</option>
+        <option value="saab">Saab</option>
+        <option value="fiat">Fiat</option>
+        <option value="audi">Audi</option>
+      </select>
+      <select name="cars">
+        <option value="volvo">Volvo</option>
+        <option value="saab">Saab</option>
+        <option value="fiat">Fiat</option>
+        <option value="audi">Audi</option>
+      </select>
+      <select name="cars">
+        <option value="volvo">Volvo</option>
+        <option value="saab">Saab</option>
+        <option value="fiat">Fiat</option>
+        <option value="audi">Audi</option>
+      </select>
+
+      <br />
+      <input type="radio" name="gender" value="female"> Female<br>
+      <input type="radio" name="gender" value="male" checked> Male<br>
+      <br />
+      <input type="submit" value="Sign Up!">
+    </form>
+  </div>
 </section>
+
+
 </body>
 </html>
