--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
 </section>
 
 <section id="right-side">
-  <div class="box">
-    <p>Sign Up</p><br />
+    <p>Sign Up</p>
 
     <form>
       <input type="text" name="firstname" placeholder="First Name" required>
-      <input type="text" name="lastname" placeholder="Last Name" required>
+      <input type="text" name="lastname" placeholder="Last Name" required><br />
 
-      <input type="email" name="email-address" placeholder="Your Email" required>
-      <input type="password" name="password" placeholder="Your Password" required>
-      <input type="password" name="password" placeholder="Confirm Your Password" required>
+      <input type="email" name="email-address" placeholder="Your Email" required><br />
+      <input type="password" name="password" placeholder="Your Password" required><br />
+      <input type="password" name="password" placeholder="Confirm Your Password" required><br />
 
       <br />
-      <select name="cars">
+      <b>Birthday</b>
+      <select name="birthday">
         <option value="volvo">Volvo</option>
         <option value="saab">Saab</option>
         <option value="fiat">Fiat</option>
