--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-   <link href="">
+   <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan" rel="stylesheet">
    <link rel="stylesheet" text="text/css" href="style.css">
    <title>Welcome to Facelook (mockup)</title>
 </head>
@@ -12,7 +12,7 @@
 <nav id="bar">
 <!--fixed bar w logo and log in form info-->
   <div class="content">
-    <div class="facelook">MYLOOK</div>
+    <div class="facelook">FACELOOK</div>
 
     <div class="login">
       <form>
@@ -100,21 +100,23 @@
       </select>
       <select name="Year">
         <option value="" disabled="disabled" selected="selected">Year</option>
-        <option value="volvo">Volvo</option>
-        <option value="saab">Saab</option>
-        <option value="fiat">Fiat</option>
-        <option value="audi">Audi</option>
+        <option value="00s">2000s</option>
+        <option value="90s">1990s</option>
+        <option value="80s">1980s</option>
+        <option value="70s">1970s</option>
+        <option value="60s">1960s</option>
       </select><br />
 
       <br />
+      <label>
       <input type="radio" name="gender" value="female"> Female
-      <input type="radio" name="gender" value="male"> Male<br>
+      <input type="radio" name="gender" value="male"> Male<br />
+      </label>
       <br />
       <input type="submit" value="Sign Up!">
     </form>
   </div>
 </section>
-
 
 </body>
 </html>
