styles for top and bottom section, add links later

--- a/about.html
+++ b/about.html
@@ -27,5 +27,44 @@
 </nav>
 
 <div class="container">
+<!--container includes top section and bottom section-->
+<!--top section has cover page, profile pic, and menu links-->
+<section id="top-content">
+  <div class="cover-page">
+    <div class="profile-pic"></div>
+    <div class="profile-name">Yona</div>
+  </div>
+  <div class="menu-button">
+    <div class="profile-button">Timeline</div>
+    <div class="profile-button">About</div>
+    <div class="profile-button">Photos</div>
+    <div class="profile-button">Friends</div>
+    <div class="edit-link"><u>Edit Profile</u></div>
+  </div>
+</section>
+
+<section id="about-content">
+<!--bottom section has about title and 4 part summary-->
+  <header class="title">About</header>
+  <div class="left-side">
+    <h3>Basic Information</h3>
+    <ul>
+      <li>Birthday: June 3rd, 1999</li>
+      <li>Education: University of Ice Cream</li>
+      <li>Hometown: Sweetsville</li>
+      <li>Currently Lives: Parfait Island</li>
+    </ul>
+    <br />
+    <br />
+    <h3>Contact Information</h3>
+  </div>
+
+  <div class="right-side">
+    <summary class="top"></summary>
+    <summary class="bottom"></summary>
+  </div>
+</div>
+
+</div>
 </body>
 </html>
