--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
     <div class="user-tools">
       <div class="profile-icon"></div>
-      Yona
+      Jane
       <div class="settings-icon"></div>
     </div>
   </div>
@@ -32,8 +32,9 @@
 <section id="top-content">
   <div class="cover-page">
     <div class="profile-pic"></div>
-    <div class="profile-name">Yona</div>
+    <div class="profile-name">Jane Doe</div>
   </div>
+
   <div class="menu-button">
     <div class="profile-button">Timeline</div>
     <div class="profile-button">About</div>
@@ -47,22 +48,30 @@
 <!--bottom section has about title and 4 part summary-->
   <header class="title">About</header>
   <div class="left-side">
-    <h3>Basic Information</h3>
-    <ul>
-      <li>Birthday: June 3rd, 1999</li>
-      <li>Education: University of Ice Cream</li>
-      <li>Hometown: Sweetsville</li>
-      <li>Currently Lives: Parfait Island</li>
-    </ul>
+    <div class="topic">Basic Information</div>
+    <br />
+    <b>Birthday:</b> Janurary 9, 1996<br />
+    <b>Education:</b> FIT<br />
+    <b>Hometown:</b> Brooklyn, New York<br />
+    <b>Currently Lives:</b> Los Angeles, California<br />
     <br />
     <br />
-    <h3>Contact Information</h3>
+    <div class="topic">Contact Information</div>
+    <br />
+    <b>Email:</b> whereismypizza@gmail.com<br />
+    <b>Telephone:</b> 685-812-4673
   </div>
 
   <div class="right-side">
-    <summary class="top"></summary>
-    <summary class="bottom"></summary>
+    <div class="topic">Words to Live By</div>
+    <br />
+    <summary class="top">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut</summary>
+    <br />
+    <div class="topic">About Me</div>
+    <br />
+    <summary class="bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</summary>
   </div>
+
 </div>
 
 </div>
