--- a/about.html
+++ b/about.html
@@ -36,11 +36,11 @@
   </div>
 
   <div class="menu-button">
-    <div class="profile-button">Timeline</div>
+    <div class="profile-button"><a href="">Timeline</a></div>
     <div class="profile-button">About</div>
-    <div class="profile-button">Photos</div>
-    <div class="profile-button">Friends</div>
-    <div class="edit-link"><u>Edit Profile</u></div>
+    <div class="profile-button"><a href="">Photos<a/></div>
+    <div class="profile-button"><a href="">Friends</a></div>
+    <div class="edit-link"><a href=""><u>Edit Profile</u></a></div>
   </div>
 </section>
 
