--- a/friends.html
+++ b/friends.html
@@ -36,7 +36,7 @@
 
   <div class="menu-button">
     <div class="profile-button"><a href="">Timeline</a></div>
-    <div class="profile-button">About</div>
+    <div class="profile-button"><a href="">About</a></div>
     <div class="profile-button"><a href="">Photos<a/></div>
     <div class="profile-button"><a href="">Friends</a></div>
     <div class="edit-link"><a href=""><u>Edit Profile</u></a></div>
@@ -50,30 +50,14 @@
       <div class="pal-pic"></div>
       <div class="pal-info"><a href="">John Doe</a><br />
       1 friend</div>
-      <div class="unfriend">Unfriend Me</div>
+      <div class="unfriend"><a href="">Unfriend Me</a></div>
     </div>
 
     <div class="general-info">
       <div class="pal-pic"></div>
       <div class="pal-info"><a href="">John Doe</a><br />
       1 friend</div>
-      <div class="unfriend">Unfriend Me</div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="general-info">
-      <div class="pal-pic"></div>
-      <div class="pal-info"><a href="">John Doe</a><br />
-      1 friend</div>
-      <div class="unfriend">Unfriend Me</div>
-    </div>
-
-    <div class="general-info">
-      <div class="pal-pic"></div>
-      <div class="pal-info"><a href="">John Doe</a><br />
-      1 friend</div>
-      <div class="unfriend">Unfriend Me</div>
+      <div class="unfriend"><a href="">Unfriend Me</a></div>
     </div>
   </div>
 
@@ -82,7 +66,23 @@
       <div class="pal-pic"></div>
       <div class="pal-info"><a href="">John Doe</a><br />
       1 friend</div>
-      <div class="unfriend">Unfriend Me</div>
+      <div class="unfriend"><a href="">Unfriend Me</a></div>
+    </div>
+
+    <div class="general-info">
+      <div class="pal-pic"></div>
+      <div class="pal-info"><a href="">John Doe</a><br />
+      1 friend</div>
+      <div class="unfriend"><a href="">Unfriend Me</a></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="general-info">
+      <div class="pal-pic"></div>
+      <div class="pal-info"><a href="">John Doe</a><br />
+      1 friend</div>
+      <div class="unfriend"><a href="">Unfriend Me</a></div>
     </div>
 
     <div class="general-info">
