header css link is now in sass_style folder

--- a/friends.html
+++ b/friends.html
@@ -3,7 +3,7 @@
 
 <head>
    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan" rel="stylesheet">
-   <link rel="stylesheet" text="text/css" href="stylefriends.css">
+   <link rel="stylesheet" text="text/css" href="sass_style/stylefriends.css">
    <title>Jane Doe's Friends (mockup)</title>
 </head>
 
