--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan" rel="stylesheet">
-   <link rel="stylesheet" text="text/css" href="styleabout.css">
+   <link rel="stylesheet" text="text/css" href="sass_style/styleabout.css">
    <title>About (mockup)</title>
 </head>
 
